# Memgentic

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  commitlint.config.mjs  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  commitlint.yml  dependabot-auto-merge.yml  dependency-review.yml  linked-version-align.yml  pre-commit.yml  release-api.yml  release-native.yml  release-please.yml  release.yml  scorecard.yml  version-consistency.yml
benchmarks/: BENCHMARKS.md  README.md  lme_split_50_450.json
benchmarks/datasets/: README.md  download.sh
benchmarks/docker/: Dockerfile
benchmarks/lib/: __init__.py  corpus_loader.py  harness.py  scorers.py
benchmarks/results/: .gitkeep  results_longmemeval_raw_20260422_baseline.jsonl  results_longmemeval_raw_20260422_baseline.meta.json  results_longmemeval_raw_20260425_pr_b_50q.jsonl
benchmarks/runners/: __init__.py  convomem_bench.py  cross_tool_transfer_bench.py  (+3 more)
dashboard/: .gitignore  package-lock.json  package.json
docs/: API_GUIDE.md  BENCHMARKS.md  DEPLOYMENT.md  FRONTEND-DESIGN.md  MCP-TOOLS.md  PRODUCT-ROADMAP.md  RELEASE.md  RUST-RESEARCH.md  STORAGE-BACKENDS.md  TECHNICAL-PLAN.md  why-memgentic.md
hooks/: README.md
memgentic/: CHANGELOG.md  README.md  SKILL.md  pyproject.toml
memgentic-api/: CHANGELOG.md  README.md  pyproject.toml
memgentic-api/memgentic_api/: __init__.py  auth.py  deps.py  main.py  schemas.py
memgentic-api/memgentic_api/routes/: briefing.py  chronograph.py  collections.py  graph.py  import_export.py  ingestion.py  memories.py  persona.py  settings.py  skills.py  sources.py  stats.py  uploads.py  watchers.py  websocket.py
memgentic-api/tests/: conftest.py  test_batch_api.py  test_briefing_api.py  test_capture_profile_api.py  test_chronograph_api.py  test_collections_api.py  test_health.py  test_import_export.py  test_ingestion_api.py  test_memories.py  test_persona_api.py  test_pins_api.py  test_security.py  test_skills_api.py  test_sources.py  test_stats.py  test_uploads_api.py  test_watchers_api.py  test_websocket.py
memgentic-native/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
memgentic-native/src/: lib.rs
memgentic-native/src/graph/: knowledge.rs  mod.rs
memgentic-native/src/parsers/: chatgpt.rs  jsonl.rs  markdown.rs  mod.rs  protobuf.rs
memgentic-native/src/textproc/: classify.rs  entities.rs  mod.rs  noise.rs  overlap.rs  scrubber.rs
memgentic/hooks/: __init__.py  install.py  session_start.py
memgentic/memgentic/: __init__.py  cli.py  config.py  events.py  exceptions.py  init_wizard.py  models.py  system_info.py
memgentic/memgentic/adapters/: __init__.py  aider.py  antigravity.py  base.py  chatgpt_import.py  claude_code.py  claude_web_import.py  codex_cli.py  copilot_cli.py  cursor.py  gemini_cli.py
memgentic/memgentic/briefing/: __init__.py  formatters.py  scorer.py  tiers.py  token_budget.py
memgentic/memgentic/daemon/: __init__.py  dedup.py  watcher.py  watcher_install.py  watcher_socket.py  watcher_state.py  watchers.py
memgentic/memgentic/daemon/file_watchers/: __init__.py  aider.py  antigravity.py  base.py  copilot_cli.py  gemini_cli.py
memgentic/memgentic/graph/: __init__.py  extractor.py  knowledge.py  search.py  temporal.py
memgentic/memgentic/hooks/: socket_post.py  user_prompt_submit.py
memgentic/memgentic/mcp/: __init__.py  formatters.py  schemas.py  server.py
memgentic/memgentic/observability/: __init__.py
memgentic/memgentic/persona/: __init__.py  bootstrap.py  defaults.py  loader.py  schema.py
memgentic/memgentic/processing/: __init__.py  consolidation.py  context_generator.py  corroboration.py  embedder.py  file_ingest.py  heuristics.py  intelligence.py  llm.py  maintenance.py  pipeline.py  query.py  scrubber.py  search_basic.py  skill_extractor.py  utils.py
memgentic/memgentic/retrieval/: __init__.py  hybrid.py  reranker.py
memgentic/memgentic/skills/: __init__.py  distributor.py  importer.py
memgentic/memgentic/storage/: __init__.py  metadata.py  migrations.py  vectors.py
memgentic/memgentic/storage/backends/: __init__.py  base.py  sqlite_vec.py
memgentic/memgentic/templates/: memory_instructions.md
memgentic/memgentic/utils/: __init__.py  process_lock.py
memgentic/tests/: conftest.py  test_aider_adapter.py  test_antigravity_adapter.py  test_benchmarks.py  test_briefing.py  test_capture_profile_cli.py  test_capture_profiles.py  test_chatgpt_adapter.py  test_claude_code_adapter.py  test_claude_web_adapter.py  test_cli.py  test_codex_cli_adapter.py  test_collections.py  test_consolidation.py  test_copilot_cli_adapter.py  test_corroboration.py  test_cursor_adapter.py  test_daemon.py  test_default_backend.py  test_edge_cases.py  test_embedder.py  test_exceptions.py  test_gemini_cli_adapter.py  test_gemini_cli_watcher.py  test_hybrid_search.py  test_init_wizard.py  test_integration.py  test_intelligence.py  test_intelligence_activation.py  test_intelligence_heuristics.py  test_knowledge_graph.py  test_llm_client.py  test_maintenance.py  test_mcp_expansion.py  test_mcp_server.py  test_mcp_stdio_cleanliness.py  test_metadata_store.py  test_migrate_storage.py  test_models.py  test_noise_filtering.py  (+23 more)
memgentic/tests/briefing/: __init__.py  test_briefing_end_to_end.py  test_formatters.py  test_scorer.py  test_tiers.py  test_token_budget.py
memgentic/tests/graph/: test_chronograph_e2e.py  test_extractor.py  test_normalization.py  test_temporal.py
memgentic/tests/persona/: test_bootstrap.py  test_defaults.py  test_loader.py  test_persona_cli.py  test_schema.py
scripts/: align_linked_versions.py  check_changelog_drift.py  check_version_consistency.py  generate_mcp_docs.py
(+106 files in other folders)
