[project]
name = "memgentic"
dynamic = ["version"]
description = "Universal AI memory layer — cross-tool knowledge capture with MCP, semantic search, and knowledge graphs"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Chariton Kypraios", email = "chariton@ellinai.com"}]
keywords = [
    "ai", "memory", "mcp", "rag", "knowledge-graph",
    "claude", "gemini", "codex", "chatgpt", "cursor",
    "semantic-search", "vector-database", "llm", "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Typing :: Typed",
]

dependencies = [
    # MCP Server
    "mcp[cli]>=1.26",

    # Vector Store
    "qdrant-client>=1.17",

    # Database (metadata)
    "aiosqlite>=0.22",

    # HTTP / Embeddings
    "httpx>=0.28",

    # File watching (daemon)
    "watchdog>=6.0",

    # CLI
    "click>=8.1",
    "rich>=14.0",

    # Core utilities
    "pydantic>=2.12",
    "pydantic-settings>=2.10",
    "python-dotenv>=1.0",
    "structlog>=25.0",
    "tenacity>=9.0",

    # Default vector backend (zero-config, multi-process safe via SQLite WAL)
    "sqlite-vec>=0.1.9",

    # YAML parsing (persona card)
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Intelligence layer — LLM processing, knowledge graph, advanced search
intelligence = [
    "langchain-core>=1.2.28",
    "langchain-google-genai>=4.0",
    "langchain-anthropic>=1.0",
    "langchain-ollama>=0.3",
    "google-genai>=1.50",
    "langgraph>=1.1",
    "networkx>=3.4",
    # Fuzzy entity resolution for the Chronograph triple extractor
    # (falls back to stdlib difflib when this is not installed).
    "rapidfuzz>=3.9",
]
# Reranker — Qwen3-Reranker-0.6B via llama-cpp-python (Plan 12 PR-E)
# Pin to ggml-org/Qwen3-Reranker-0.6B-Q8_0-GGUF or Voodisss/Qwen3-Reranker-0.6B-GGUF-llama_cpp;
# random community GGUFs silently drop the classifier head and produce garbage scores.
reranker = [
    "llama-cpp-python>=0.3.5",
]
# Observability — OpenTelemetry tracing + metrics (opt-in)
observability = [
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp>=1.28",
    "opentelemetry-instrumentation-httpx>=0.49",
    "opentelemetry-instrumentation-sqlite3>=0.49",
]
# Document format support — extract text from office files
documents = [
    "python-docx>=1.1",
    "striprtf>=0.0.26",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "ebooklib>=0.18",
    "pdfminer.six>=20231228",
]
# sqlite-vec — kept for back-compat; sqlite-vec is now a core dependency.
# `pip install 'memgentic[sqlite-vec]'` still works but installs nothing extra.
sqlite-vec = []
# Native Rust acceleration is available as a separate package:
#     pip install memgentic-native
# It is auto-detected at runtime — no extra config needed. When present, hot
# paths (scrubbing, parsing, graph, dedup) run 5-50× faster. When absent, the
# pure-Python fallback is used transparently. We do NOT list it as an extra
# here because it ships as platform-specific wheels on a separate release
# cycle (release-native.yml).

# All optional deps for development
dev = [
    "memgentic[intelligence]",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "ruff>=0.14",
    "pyright>=1.1",
]

[project.scripts]
memgentic = "memgentic.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # Allow long lines in test data

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
ignore = [
    # MCP SDK has incomplete type stubs — suppress errors in server module
    "memgentic/mcp/server.py",
    # Conditional Rust fallback — pyright can't narrow the None branch
    "memgentic/graph/knowledge.py",
    # Daemon optional metadata_store parameter flow — narrowing too complex
    "memgentic/daemon/watcher.py",
    # OpenTelemetry is an optional extra — the module sets providers to
    # None when not installed, pyright can't prove usage is guarded
    "memgentic/observability/__init__.py",
    # LangChain BaseModel | None flow across the distillation pipeline
    "memgentic/processing/intelligence.py",
    "memgentic/processing/pipeline.py",
]
# Optional runtime dependencies (memgentic-native, OpenTelemetry observability)
# are imported under try/except. Pyright can't see them when the extras aren't
# installed — that's by design. Demote these to warnings so CI stays green.
reportMissingImports = "warning"
reportMissingModuleSource = "none"

[project.urls]
Homepage = "https://github.com/Chariton-kyp/Memgentic"
Repository = "https://github.com/Chariton-kyp/Memgentic"
Documentation = "https://github.com/Chariton-kyp/Memgentic/tree/main/docs"
Issues = "https://github.com/Chariton-kyp/Memgentic/issues"
Changelog = "https://github.com/Chariton-kyp/Memgentic/blob/main/CHANGELOG.md"
Source = "https://github.com/Chariton-kyp/Memgentic/tree/main/memgentic"

[tool.hatch.build.targets.wheel]
packages = ["memgentic"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "memgentic/__version__.py"
